# red-lox

./: Cargo.toml  README.md
.github/workflows/: rust.yml
red-lox-ast/: Cargo.toml
red-lox-ast/src/: expr.rs  lib.rs  parser.rs  scanner.rs  stmt.rs  visitor.rs
red-lox-bin/: Cargo.toml
red-lox-bin/src/: compiler.rs  interpreter.rs  main.rs
red-lox-command/: Cargo.toml
red-lox-command/src/: compiler.rs  interpreter.rs  lib.rs
red-lox-command/tests/: command_test.rs
red-lox-compiler/: Cargo.toml
red-lox-compiler/src/: chunk.rs  code_location_registry.rs  command.rs  compiler.rs  debug.rs  instruction.rs  interned_string.rs  lib.rs  lox_function.rs  native_function.rs  op_code.rs  parser.rs  parsing_rule.rs  value.rs  vm.rs  write_action.rs
red-lox-compiler/src/common/: code_location_registry.rs  constant.rs  interned_string.rs  mod.rs  op_code.rs  stack.rs  value.rs  variable_location.rs  write_action.rs
red-lox-compiler/src/common/chunk/: chunk.rs  debug.rs  mod.rs
red-lox-compiler/src/common/class/: class.rs  mod.rs
red-lox-compiler/src/common/function/: closure.rs  mod.rs  (+4 more)
red-lox-compiler/src/compiler/: compiler.rs  mod.rs
red-lox-compiler/src/parser/: error.rs  mod.rs  parser.rs  parsing_rule.rs
red-lox-compiler/src/parser_guard/: breakable_statement_guard.rs  function_declaration_scope.rs  local_scope.rs  mod.rs
red-lox-compiler/src/runtime/: call_frame.rs  error.rs  mod.rs  upvalue_list.rs  vm.rs
red-lox-interpreter/: Cargo.toml
red-lox-interpreter/src/: command.rs  environment.rs  expr.rs  globals.rs  lib.rs  main.rs  resolver.rs  stmt.rs
red-lox-interpreter/tests/: interpreter_test.rs
red-lox-parser/: Cargo.toml
red-lox-parser/src/: lib.rs
src/: main.rs  scanner.rs
tests/lox/assignment/: valid_assignment.lox
tests/lox/binary_op/: errors.lox  left_associativity.lox  valid_binary.lox
tests/lox/block/: scoping.lox  shadowing.lox
tests/lox/class/: class_defn.lox  class_defn_compiler_only.lox  inheritance.lox  instantiation.lox  method_call.lox
tests/lox/conditional/: valid_if.lox
tests/lox/errors/: binary_op_errors.lox  division_by_zero.lox  parse_stmt_errors.lox  resolution_errors.lox  runtime_errors.lox  unary_op_errors.lox
tests/lox/functions/: closure.lox  function.lox
tests/lox/logical_op/: and_has_higher_precedence.lox  simple_logical_op.lox
tests/lox/loop/: break_without_loop.lox  loop_continue_compiler_only.lox  valid_for_stmt.lox  valid_while_stmt.lox
tests/lox/string/: literals.lox
tests/lox/switch_statement/: valid_switch_statement_compiler_only.lox
tests/lox/ternary_op/: precedence_over_comma_op.lox  right_associativity.lox  valid_ternary.lox
tests/lox/unary_op/: valid_unary.lox
tests/lox/while_stmt/: valid_for_stmt.lox  valid_while_stmt.lox
(+6 files in other folders)
