[package]
name = "red-lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
red-lox-ast = {workspace=true}
red-lox-interpreter = {workspace=true}

[workspace]
members = ["red-lox-ast", "red-lox-interpreter"]

[workspace.dependencies]
red-lox-ast = {path = "red-lox-ast"}
red-lox-interpreter = {path = "red-lox-interpreter"}
thiserror = "2.0.9"
## dev-dependencies
rstest = "0.24.0"
googletest = "0.13.0"

[[bin]]
name = "red-lox"
path = "red-lox-interpreter/src/main.rs"